--- a/cmake_simple/CMakeLists.txt
+++ b/cmake_simple/CMakeLists.txt
@@ -1,10 +1,13 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.0)
 
 project(TestCMake)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(CMAKE_CXX_FLAGS "-Wall")
+# set this variable to Debug to be able to use the debugging symbols
+set(CMAKE_BUILD_TYPE Debug)
+
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 
 set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
 
